UPDATE INDEX FILE

--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 	<title>KRUSHNALI PORTFOLIO</title>
 </head>
 <body>
-<h1>THIS IS MY FIRST WEBPAGE</h1>
+<h1>THIS IS MY FIRST WEBPAGE.</h1>
 <p>hello</p>
 </body>
 </html>
