--- a/index1.html
+++ b/index1.html
@@ -86,7 +86,7 @@
                   <li><img src="https://cdn-icons-png.flaticon.com/512/5105/5105250.png"height="30px">XML</li>
                   <li><img src="https://png.pngtree.com/png-vector/20190409/ourmid/pngtree-json-file-document-icon-png-image_923226.jpg"height="30px">JSON</li>
                   <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Antu_mongodb.svg/2048px-Antu_mongodb.svg.png"height="30px">MongoDB</li>
-                   <li><img src="https://cdn-icons-png.flaticon.com/512/226/226777.png"height="30px">Core Java</li>
+                   <li><img src="https://cdn-icons-png.flaticon.com/512/226/226777.png"height="30px">Core java</li>
                   </ul>
                 </td>
               </tr>
