--- a/index1.html
+++ b/index1.html
@@ -135,7 +135,7 @@
                     <li>Phone Number : <b>7744924275</b></li>
                     <li>Email Id :<b> krushnalijadhav222@gmail.com</b></li>
                     <li>Linkedin :<b> www.linkedin.com/in/krushnali-jadhav</b> </li>
-                    <li>Github : <b> shree887/github3232</b> </li>
+                    <li>Github : <b> https://github.com/Krushnali28</b> </li>
                     <li>Address : Aurangabad MH</li>
                   </ul>
                 </td>
